fix: :lipstick: set display to none on collapsed elements
Visibility: collapse works as intended on Chromium based browsers, but not on some browsers (Firefox), so using display: none as well to get intended functionality. Closes #79

--- a/webshop_frontend/src/App.css
+++ b/webshop_frontend/src/App.css
@@ -1053,6 +1053,7 @@ form a:hover {
 
 .collapsed {
   visibility: collapse;
+  display: none;
 }
 
 .button-container {
